--- a/server/package.json
+++ b/server/package.json
@@ -9,9 +9,11 @@
     "@babel/core": "7.0.0-beta.44",
     "@babel/node": "^7.0.0-beta.44",
     "@babel/preset-env": "^7.0.0-beta.49",
+    "bcrypt-nodejs": "^0.0.3",
     "body-parser": "^1.18.3",
     "cors": "^2.8.4",
     "express": "^4.16.3",
+    "jsonwebtoken": "^8.2.2",
     "mongoose": "^5.1.4",
     "morgan": "^1.9.0"
   },
