--- a/server/package.json
+++ b/server/package.json
@@ -9,13 +9,17 @@
     "@babel/core": "7.0.0-beta.44",
     "@babel/node": "^7.0.0-beta.44",
     "@babel/preset-env": "^7.0.0-beta.49",
+    "aws-sdk": "^2.263.1",
     "bcrypt-nodejs": "^0.0.3",
     "body-parser": "^1.18.3",
     "cors": "^2.8.4",
     "express": "^4.16.3",
+    "faker": "^4.1.0",
     "jsonwebtoken": "^8.2.2",
     "mongoose": "^5.1.4",
-    "morgan": "^1.9.0"
+    "morgan": "^1.9.0",
+    "multer": "^1.3.0",
+    "multer-s3": "^2.7.0"
   },
   "scripts": {
     "start": "nodemon --exec babel-node server.js"
