--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
     "@babel/core": "7.0.0-beta.44",
     "@babel/node": "^7.0.0-beta.44",
     "@babel/preset-env": "^7.0.0-beta.49",
+    "algolia-search": "^2.0.1",
     "async": "^2.6.1",
     "aws-sdk": "^2.263.1",
     "bcrypt-nodejs": "^0.0.3",
@@ -18,6 +19,7 @@
     "faker": "^4.1.0",
     "jsonwebtoken": "^8.2.2",
     "mongoose": "^5.1.4",
+    "mongoose-algolia": "^1.7.1",
     "mongoose-deep-populate": "^3.1.1",
     "morgan": "^1.9.0",
     "multer": "^1.3.0",
