--- a/server/package.json
+++ b/server/package.json
@@ -23,7 +23,8 @@
     "mongoose-deep-populate": "^3.1.1",
     "morgan": "^1.9.0",
     "multer": "^1.3.0",
-    "multer-s3": "^2.7.0"
+    "multer-s3": "^2.7.0",
+    "stripe": "^6.3.0"
   },
   "scripts": {
     "start": "nodemon --exec babel-node server.js"
